...
                                        <rect key="frame" x="162" y="0.0" width="51" height="31"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ReturningShopperSwitch"/>
                                        <connections>
                                            <action selector="returningShopperValueChanged:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zWT-oj-uNm"/>
...
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Hna-Cr-jnR">
                                        <rect key="frame" x="163" y="31" width="51" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="WithShippingSwitch"/>
                                        <connections>
                                            <action selector="withShippingValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Aln-KL-yKV"/>
...
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="xkv-uS-lPt" userLabel="Full Billing Switch">
                                        <rect key="frame" x="163" y="62" width="51" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="FullBillingSwitch"/>
                                    </switch>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="With Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sqi-jc-dUs" userLabel="With Email">
...
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="u0H-Xe-vin" userLabel="with Email Switch">
                                        <rect key="frame" x="163" y="93" width="51" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="WithEmailSwitch"/>
                                    </switch>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Store Currency:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Df9-pw-Kb1">
...
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="20" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1E4-kM-4oY">
                                        <rect key="frame" x="150" y="158" width="110" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AmountField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="110" id="BlH-PY-OJs"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAo-mM-qRo">
                                        <rect key="frame" x="13" y="225" width="349" height="105"/>
                                        <accessibility key="accessibilityConfiguration" identifier="CheckoutButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="105" id="hg7-UI-ey7"/>
...
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="CoverView"/>
                                        <constraints>
                                            <constraint firstItem="5gd-cl-sWV" firstAttribute="centerY" secondItem="cco-GN-tEP" secondAttribute="centerY" constant="24.5" id="Dww-Ok-kT3"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Success!" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A3N-It-HEB">
                                        <rect key="frame" x="95.5" y="303" width="184" height="53"/>
                                        <accessibility key="accessibilityConfiguration" identifier="SuccessLabel"/>
                                        <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="45"/>
                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
...
