...

/* ------- General ------- */

/* When shopwing error alert, a single button lets you close it, and this is the text in that button */
"Alert_OK_Button_Text" = "OK";
/* On numeric keyboards we add a "done" button to close them */
"Keyboard_Done_Button_Text" = "Done";

/* ------- BSCcInputLine ------- */

/* General error while submitting CC to validate credit card */
"Error_General_CC_Validation_Error" = "An error occurred. Please try again.";
/* CardType not supported by merchant while submitting CC details to BlueSnap server */
...
"Error_General_Payment_error" = "An error occurred; please try again";

/* Title of Payment screen (where you fill billing details) */
"Title_Payment_Screen" = "Payment";

/* Label for the Name field in the payment and shipping screens */
"Label_Name" = "Name";
/* Label for the Email field in the payment screen */
"Label_Email" = "Email";
/* Label for the Street field in the payment and shipping screens */
"Label_Street" = "Street";
/* Label for the City field in the payment and shipping screens */
"Label_City" = "City";
...
