...
                                        </connections>
                                    </view>
                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tF0-LC-ldx" userLabel="NewCard" customClass="BSPaymentTypeView" customModule="BluesnapSDK">
                                        <rect key="frame" x="28" y="130" width="320" height="40"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinY="YES" flexibleMaxY="YES"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <accessibility key="accessibilityConfiguration" identifier="CcButton">
                                            <accessibilityTraits key="traits" button="YES"/>
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="Card_button"/>
                                            <userDefinedRuntimeAttribute type="number" keyPath="iconWidth">
...
